# aoc_2025

./: LICENSE  aoc2025.cabal  flake.nix
app/: Main.hs
lib/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Utils.hs
tests/: Main.hs
