cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alessio Biancone
maintainer:         alebian1996@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library aoc2025-lib
    exposed-modules:  Utils,
                      Day1,
                      Day2,
                      Day3,
                      Day4,
                      Day5,
                      Day6,
                      Day7,
                      Day8,
    hs-source-dirs:   lib
    build-depends:    base,
                      split,
                      flow ==2.0.*,
                      array ==0.5.*,
                      containers ==0.7.*,
    default-language: Haskell2010

executable aoc2025
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.2.0,
                      aoc2025-lib,
                      flow ==2.0.*,
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:    base,
                      hspec,
                      aoc2025-lib,
                      flow ==2.0.*,
    hs-source-dirs:   tests
    default-language: Haskell2010
